--- a/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
@@ -2,6 +2,7 @@
 @model LMSGroupOne.Models.MainNavigation.TreeNode
 
 
+@*used for javascripts*@
 <style>
     treeItem {
     }
@@ -13,313 +14,27 @@
     }
 </style>
 
-<script>
-
-
-        //root = 0,    enum from c#
-        //folder = 1,
-        //student = 2,
-        //teacher = 3,
-        //course = 4,
-        //module = 5,
-        //activity = 6,
-        //file = 7,
-        //search = 8,
-        //none = 9,
-        //trash = 10,
-
-    
-
-    //let season = seasons.SPRING
-
-
-    class TreeItemGenerator
-    {
-        static NodeTypes =  
-        {
-            ROOT: 0,
-            FOLDER: 1,
-            STUDENT: 2,
-            TEACHER: 3,
-            COURSE: 4,
-            MODULE: 5,
-            ACTIVITY: 6,
-            FILE: 7,
-            SEARCH: 8,
-            NONE: 9,
-            TRASH: 10
-        }
-
-
-
-        static GenerateItem(id, type, parentId, parentType, name, hasChildren, canCreate, canEdit, isOpen) {
-            let item = document.createElement("nobr");
-            item.classList = "treeItem";
-
-            let classList = "";
-            let style = "";
-
-            switch (type) {
-                case this.NodeTypes.TEACHER:  
-                    classList = "fas fa-user-graduate";
-                    style = "color:black;";
-                    break;
-                case this.NodeTypes.COURSE: 
-                    classList = "fas fa-chalkboard-teacher";
-                    style = "color:darkblue;";
-                    break;
-                case this.NodeTypes.MODULE: 
-                    classList = "fas fa-book-open";
-                    style = "color:green;";
-                    break;
-                case this.NodeTypes.ACTIVITY: 
-                    classList = "fas fa-flask";
-                    style = "color:dodgerblue;";
-                    break;
-                case this.NodeTypes.FILE: 
-                    classList = "fas fa-file";
-                    style = "color:dimgray;";
-                    break;
-                case this.NodeTypes.STUDENT: 
-                    classList = "fas fa-user";
-                    style = "color:black;";
-                    break;
-                case this.NodeTypes.FOLDER: 
-                    if (isOpen)
-                    {
-                        classList = "folderIcon fas fa-folder-open";
-                        style = "color:yellow;";
-                    }
-                    else
-                    {
-                        classList = "folderIcon fas fa-folder";
-                        style = "color:yellow;";
-                    }
-                    break;
-                case this.NodeTypes.ROOT: 
-                    classList = "fas fa-globe";
-                    style = "color:black;";
-                    break;
-                case this.NodeTypes.SEARCH: 
-                    classList = "fas fa-search";
-                    style = "color:black;";
-                    break;
-            };
-
-            
-            if (hasChildren)
-            {
-                let caret = this.#GenerateCaret(id, type, isOpen);
-                item.innerHTML += caret.outerHTML;
-            }
-            let icon = this.#GenerateIcon(id, type, classList, style, isOpen);
-            item.innerHTML += icon.outerHTML;
-            let text = this.#GenerateText(id, name, type, parentId, parentType, canEdit, isOpen);
-            item.innerHTML += text.outerHTML;
-
-
-            if (canCreate != this.NodeTypes.NONE)
-            {
-                let add = this.#GenerateAddIcon(id, type, parentId, parentType, isOpen);
-                item.innerHTML += add.outerHTML;
-            }
-
-            return item;
-        }
-
-        static GenerateTestItemHTML(node, parentNode)
-        {            
-            let hasChildren = node.Nodes != null;            
-            
-
-            let item = this.GenerateItem(node.Id, node.Type, parentNode.Id, parentNode.Type, node.Name, hasChildren, node.CanCreate, node.Editable, node.Open);
-            document.write(item.outerHTML);
-        }
-
-        static GenerateItemHTML(id, type, parentId, parentType, name, hasChildren, canCreate, canEdit, isOpen)
-        {
-            let item = this.GenerateItem(id, type, parentId, parentType, name, hasChildren, canCreate, canEdit, isOpen);
-            document.write(item.outerHTML);
-        }
-
-        static #GenerateAddIcon(id, type, parentId, parentType, isOpen)
-        {
-            let add = document.createElement("i");
-            add.id = id;
-            add.dataset.itemType = type;
-            add.dataset.itemCreates = "teacher";  // todo
-            add.dataset.itemParentId = parentId;
-            add.dataset.itemParentType = parentType;
-            add.dataset.itemExtra = "new";
-            add.dataset.itemOpen = isOpen;
-            add.classList = "fas fa-plus-circle";
-            add.style = "color:green";
-            return add;            
-        }
-
-        static #GenerateCaret(id, type, isOpen)
-        {
-            let caret = document.createElement("i");
-            if (isOpen)
-            {
-                caret.classList = "carretIcon fas fa-caret-down";
-            }
-            else
-            {
-                caret.classList = "carretIcon fas fa-caret-right";
-            }
-            caret.id = id;
-            caret.dataset.itemType = type;
-            caret.dataset.itemExtra = "caret";
-            caret.dataset.itemOpen = isOpen;
-            return caret;
-        }
-
-        static #GenerateIcon(id, type, classList, style, isOpen)
-        {
-            let icon = document.createElement("i");
-            icon.id = id;
-            icon.dataset.itemType = type;
-            icon.dataset.itemExtra = "icon";
-            icon.dataset.itemOpen = isOpen;
-            icon.classList = classList;
-            icon.style = style;
-            return icon;
-        }
-
-        static #GenerateText(id, name, type, parentId, parentType, canEdit, isOpen) {
-            let text = document.createElement("span");
-            text.innerHTML = name;
-            text.id = id;
-            text.contentEditable = false;
-            text.dataset.itemType = type;
-            text.dataset.itemExtra = "text";
-            text.dataset.itemParentId = parentId;
-            text.dataset.itemParentType = parentType;
-            text.dataset.itemOpen = isOpen;
-            text.dataset.itemEdit = canEdit;
-            return text;
-        }
-
-        static Test(input)
-        {
-            console.log(input.Id);
-        }
-
-    }
-
-
-</script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<script src="~/js/TreeFactory.js" asp-append-version="true"></script>
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-
-
-<script>
-    let obj = @(Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model)));
-                TreeItemGenerator.Test(obj);
-</script>
 
 
 
 <div id="menuDivId" style="background-color:aqua;">
     <div>
-        <i id="trashCanId" class="fa fa-trash-alt" data-item-type="@NodeType.trash" style ="font-size:48px;color:black; padding:4px;"></i>        
+        <i id="trashCanId" class="fa fa-trash-alt" data-item-type="@NodeType.trash" style="font-size:48px;color:black; padding:4px;"></i>
 
     </div>
     
+    <script>
+            TreeFactory.GenerateTree(@(Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model))), @(Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model))));
+    </script>
 
 
-    <ul class="list-group" style="user-select: none;">
-        @{
-            TreeRecursive(Model, Model);
-        }
-    </ul>
-
+    
 
 
 
 </div>
-
-
-
-
-
-@functions
-{
-
-    private void TreeName(TreeNode node, TreeNode parentNode)
-    {
-        <span contenteditable="false" id="@node.Id" data-item-type="@node.Type" data-item-extra="text" data-item-parent-id="@parentNode.Id" data-item-parent-type="@parentNode.Type" style="display: inline-block; page-break-inside:avoid;">
-            @node.Name
-        </span>
-    }
-
-    private void TreeEditableNew(TreeNode node, TreeNode parentNode)
-    {
-        if (node.Editable)
-        {
-            <i id="@node.Id" data-item-type="@node.Type" data-item-creates="@node.CanCreate" data-item-parent-id="@parentNode.Id" data-item-parent-type="@parentNode.Type" data-item-extra="new" class="fas fa-plus-circle" style="color:green"></i>
-        }
-    }
-
-    private void TreeEditableDelete(TreeNode node)
-    {
-        if (node.Editable)
-        {
-            <i id="@node.Id" data-item-type="@node.Type" data-item-extra="delete" class="fas fa-minus-circle" style="color:red"></i>
-        }
-    }
-
-    private void TreeRecursive(TreeNode node, TreeNode parentNode)
-    {
-        bool hasChildren = node.Nodes != null;
-
-
-        <li class="list-group-item" style="background:none;">
-
-            
-
-            <script>
-
-                //TreeItemGenerator.GenerateItemHTML("@node.Id", "@node.Type", "@parentNode.Id", "@parentNode.Type", "@node.Name", "@hasChildren", "@node.CanCreate", "@node.Editable", "False");
-
-                TreeItemGenerator.GenerateTestItemHTML(@(Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(node))), @(Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(parentNode))));
-
-            </script>
-            
-            @if (hasChildren)
-            {
-
-                @foreach (var item in node.Nodes)
-                {
-                    <ul class="list-group" hidden>
-                        @{
-                            TreeRecursive(item, node);
-                        }
-                    </ul>
-                }
-            }
-
-
-        </li>
-    }
-}
-
 
 
 
@@ -772,7 +487,7 @@
             listItem.style = "background:none;";
 
 
-            let item = TreeItemGenerator.GenerateItem(id, type, parentId, parentType, name);
+            let item = TreeFactory.GenerateItem(id, type, parentId, parentType, name);
             
 
            
