--- a/LMSGroupOne/Views/MainNavigation/Index.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Index.cshtml
@@ -9,23 +9,46 @@
     <div class="row p-0 m-0">
 
         @*the navigation tree section*@
-        <div class="col-3 p-0 m-0">
+        <div class="col-4 p-0 m-0">
 
             @await Html.PartialAsync("_TreeViewPartial")
 
         </div>
 
         @*the main content section*@
-        <div class="col-9 p-0 m-0">
+        <div class="col-8 p-0 m-0">
 
             @await Html.PartialAsync("_MainContentPartial")
 
         </div>
-
-
         
 
     </div>
 </div>
 
+
+
+<script>
+    window.addEventListener("load", (event) =>
+    {
+        LoadPersonalHomeView(event)
+    });
+
+    function LoadPersonalHomeView(event)
+    {        
+
+        $.ajax({
+            type: "GET",
+            url: "/MainNavigation/OnHome",
+            data: { type:"load"},
+            cache: false,
+            success: result =>
+            {                                
+                document.getElementById("contentDivId").innerHTML = result;
+            }
+        });
+
+    };
+
+</script>
 
