--- a/LMSGroupOne/Views/Home/TeacherCreateAccount.cshtml
+++ b/LMSGroupOne/Views/Home/TeacherCreateAccount.cshtml
@@ -1,4 +1,4 @@
-﻿@model LMS.Core.Models.ViewModels.Account.TeacherCreateAccountViewModel
+﻿@model TeacherCreateAccountViewModel
 @inject IRoleSelectService roleSelectService
 @inject ICourseSelectService courseSelectService
 
@@ -64,14 +64,14 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript">
         $(function hideOnLoad() {
-            $('#course').hide();
+            $("#course").hide();
         });
         $(function () {
             $("#role").change(function () {
-                if ($(this).val() = "b17b6bd5-d706-458a-9aec-b7f7fe8a9bc1") { ('#course').show(); }
+                if ($(this).val() == "Student") { $("#course").show(); }
+                else if ($(this).val() == "Teacher") { $("#course").empty(); $("#course").hide(); }
             });
         });
     </script>
