--- a/LMSGroupOne/Views/_ViewImports.cshtml
+++ b/LMSGroupOne/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using LMSGroupOne
 @using LMSGroupOne.Models
 @using LMS.Core.Models.Entities
-@using LMSGroupOne.Services 
+@using LMSGroupOne.Services
+@using LMS.Core.Models.ViewModels.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
