--- a/LMSGroupOne/Views/Shared/_LoginPartial.cshtml
+++ b/LMSGroupOne/Views/Shared/_LoginPartial.cshtml
@@ -2,14 +2,22 @@
 @inject SignInManager<Person> SignInManager
 @inject UserManager<Person> UserManager
 
+@{
+    Person currentUser = await UserManager.GetUserAsync(User);
+    var userRolesList = await UserManager.GetRolesAsync(currentUser);
+    var userRoles = String.Join(", ",userRolesList);
+    bool isTeacher = userRoles.Contains("Teacher");
+    bool isStudent = userRoles.Contains("Student");
+}
+
 @if (SignInManager.IsSignedIn(User))
-{
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="btn btn-link btn-primary">Logout</button>
-        </form>
-}
-else
-{
- 
-}
+            {
+                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name (@userRoles)</a>
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button type="submit" class="btn btn-link btn-primary">Logout</button>
+                </form>
+            }
+            else
+            {
+
+            }
