--- a/LMSGroupOne/Views/Home/CreateAccount.cshtml
+++ b/LMSGroupOne/Views/Home/CreateAccount.cshtml
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group" id="course">
                 <label asp-for="CourseId">Add to course (not required)</label>
-                <select asp-for="CourseId" asp-items="@await courseSelectService.GetCoursesAsync()" class="form-control">
+                <select asp-for="CourseId" asp-items="@await courseSelectService.GetCoursesAsync()" class="form-control" id="course-select">
                     <option value="" hidden disabled selected>Select a course</option>
                 </select>
                 <span asp-validation-for="CourseId" class="text-danger"></span>
@@ -71,7 +71,7 @@
         $(function () {
             $("#role").change(function () {
                 if ($(this).val() == "Student") { $("#course").toggle(); }
-                else if ($(this).val() == "Teacher") { $("#course-select")[0].selectindex = -1; $("#course").hide('slow'); }
+                else if ($(this).val() == "Teacher") { $("#course-select")[0].selectedIndex = -1; $("#course").hide('slow'); }
             });
         });
     </script>
