--- a/LMSGroupOne/Views/Shared/_LoginPartial.cshtml
+++ b/LMSGroupOne/Views/Shared/_LoginPartial.cshtml
@@ -4,12 +4,18 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="btn btn-link btn-primary">Logout</button>
-        </form>
+    <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+    @if (User.IsInRole("Teacher"))
+    {
+        <div>
+            <a asp-area="" asp-controller="Home" asp-action="CreateAccount" class="text-white">Create account</a>
+        </div>
+    }
+    <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+        <button type="submit" class="btn btn-link btn-primary">Logout</button>
+    </form>
 }
 else
 {
- 
+
 }
