--- a/LMSGroupOne/Views/Module/CreateModule.cshtml
+++ b/LMSGroupOne/Views/Module/CreateModule.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CourseId" class="control-label"></label>
-                <select asp-for="CourseId" class ="form-control" asp-items="ViewBag.Courses"></select>
+                <select asp-for="CourseId" class="form-control" asp-items="@(new SelectList(ViewBag.courses,"Id","Name"))"></select>
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
