--- a/LMSGroupOne/Views/Shared/_Layout.cshtml
+++ b/LMSGroupOne/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
-                        
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Course
@@ -55,6 +55,18 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="activity" asp-action="create">Create New</a>
                                 <a class="nav-link text-dark" asp-area="" asp-controller="activity" asp-action="edit" asp-route-id="1">Edit Id1</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">List</a>
+                            </div>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Account
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="account" asp-action="create">Create New</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="account" asp-action="edit" asp-route-id="1">Edit Id1</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">List</a>
                             </div>
