--- a/LMSGroupOne/Views/Shared/_Layout.cshtml
+++ b/LMSGroupOne/Views/Shared/_Layout.cshtml
@@ -65,8 +65,7 @@
                                 Account
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="account" asp-action="create">Create New</a>
-                                <a class="nav-link text-dark" asp-area="" asp-controller="account" asp-action="edit" asp-route-id="1">Edit Id1</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="home" asp-action="createaccount">Create New</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">List</a>
                             </div>
