--- a/LMSGroupOne/Views/Account/Create.cshtml
+++ b/LMSGroupOne/Views/Account/Create.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Home" asp-action="CreateAccount">
+        <form asp-controller="home" asp-action="Create">
             <h4>Create account</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -64,18 +64,14 @@
 <div class="modal fade" id="createAccountResult" tabindex="-1" role="dialog" aria-labelledby="aModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header"><h5 class="modal-title" id="aModalLabel">@ViewBag.UserName</h5></div>
-            <div class="modal-body">Account was successfully created with role @ViewBag.Role</div>
-            <div class="modal-footer">
-                <a asp-controller="Home" asp-action="CreateAccount">Create another account</a>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-            </div>
+            <div class="modal-header"><h5 class="modal-title" id="aModalLabel">@ViewBag.Email</h5></div>
+            <div class="modal-body">@ViewBag.Result</div>
         </div>
     </div>
 </div>
 
 @{
-    if (ViewBag.UserName != null)
+    if (ViewBag.Result != null)
     {
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
