--- a/LMSGroupOne/Views/Account/Edit.cshtml
+++ b/LMSGroupOne/Views/Account/Edit.cshtml
@@ -1,17 +1,17 @@
-﻿@model AccountCreateViewModel
+﻿@model AccountEditViewModel
 @inject IRoleSelectService roleSelectService
 @inject ICourseSelectService courseSelectService
 
 @{
-    ViewData["Title"] = "Create Account";
+    ViewData["Title"] = "Edit Account";
 }
 
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Home" asp-action="CreateAccount">
-            <h4>Create account</h4>
+        <form asp-controller="Home" asp-action="EditAccount">
+            <h4>Edit account</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -54,38 +54,12 @@
                 <span asp-validation-for="CourseId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create account" class="btn btn-primary" />
+                <input type="submit" value="Update account" class="btn btn-primary" />
                 <a asp-controller="Home" asp-action="Index" class="btn btn-primary">Cancel</a>
             </div>
         </form>
     </div>
 </div>
-
-<div class="modal fade" id="createAccountResult" tabindex="-1" role="dialog" aria-labelledby="aModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header"><h5 class="modal-title" id="aModalLabel">@ViewBag.UserName</h5></div>
-            <div class="modal-body">Account was successfully created with role @ViewBag.Role</div>
-            <div class="modal-footer">
-                <a asp-controller="Home" asp-action="CreateAccount">Create another account</a>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-@{
-    if (ViewBag.UserName != null)
-    {
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-        <script type="text/javascript">
-            $(function () {
-                $("#createAccountResult").modal('show');
-            });
-        </script>
-    }
-}
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
