--- a/LMSGroupOne/Views/Document/Upload.cshtml
+++ b/LMSGroupOne/Views/Document/Upload.cshtml
@@ -1,11 +1,11 @@
-﻿@model AddDocumentViewModel
+﻿@model UploadDocumentsViewModel
 
 @{
     ViewData["Title"] = "Upload documents";
 }
 
 <h1>Upload documents</h1>
-<form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="UploadDocuments">
+<form method="post" enctype="multipart/form-data" asp-controller="Document" asp-action="Upload">
     <span>Select File:</span>
     <input type="file" name="postedDocuments" multiple />
     <input type="submit" value="Upload" />
