--- a/LMSGroupOne/Views/MainNavigation/Index.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Index.cshtml
@@ -21,30 +21,92 @@
             @await Html.PartialAsync("_MainContentPartial")
 
         </div>
-        
+
 
     </div>
 </div>
 
 
 
+//------------------------modal ---------------------
+
+
+<style>
+    /*body {
+        font-family: Arial, Helvetica, sans-serif;
+    }*/
+
+    /* The Modal (background) */
+    .centerModal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    /* Modal Content */
+    .centerModalContent {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+
+    /* The Close Button */
+    .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+</style>
+
+
+
+<!-- The Modal -->
+<div id="centerModalId" class="centerModal">
+
+    <!-- Modal content -->
+    <div id="centerModalContentId" class="centerModalContent">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+    </div>
+
+</div>
+
+
+
+
+
 <script>
-    window.addEventListener("load", (event) =>
-    {
+    window.addEventListener("load", (event) => {
         LoadPersonalHomeView(event)
     });
 
-    function LoadPersonalHomeView(event)
-    {
-        
+    function LoadPersonalHomeView(event) {
+
 
         $.ajax({
             type: "GET",
             url: "/MainNavigation/OnHome",
-            data: { type:"load"},
+            data: { type: "load" },
             cache: false,
-            success: result =>
-            {                                
+            success: result => {
                 document.getElementById("contentDivId").innerHTML = result;
             }
         });
@@ -53,3 +115,12 @@
 
 </script>
 
+<script>
+    // test script for modal delete it later
+    window.onclick = function (event) {
+        let modal = document.getElementById("centerModalId")
+    if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
